apps/flask_apps/purchase-requisition/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: purchase-requisition
  labels:
    app.kubernetes.io/name: purchase-requisition
    app.kubernetes.io/part-of: capitol-aggregates
